Preventing DIV flickering
This way, the browser doesn't need to way for the script to load until
he can hide the footnotes. This avoids a short flickering of the
footnotes element after the site has loaded.

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -311,6 +311,7 @@ article {
 
 	.footnotes {
 		margin: 40px 0;
+		display: none;
 
 		.reversefootnote {
 			border: 0;
